--- a/hydromag.html
+++ b/hydromag.html
@@ -37,7 +37,7 @@
         <p>Po najechaniu na element listy powinien wyświetlić się div</p>
         <ol>
             <li class="dymek">Po najechaniu tutaj powinien wyświetlić się div
-                <div class="dymek"><p>Wyświetliłem się :)</p></div></li>
+                <div class="dymek"><p>Wyświetliłem się tutaj:)</p></div></li>
         </ol>
     </body>
 </html>
