--- a/hydromag.html
+++ b/hydromag.html
@@ -36,7 +36,7 @@
     <body>
         <p>Po najechaniu na element listy powinien wyświetlić się div</p>
         <ol>
-            <li class="dymek">Po najechaniu tutaj powinien wyświetlić się div
+            <li class="dymek">Po najechaniu tutaj powinien wyświetlić się czasem div
                 <div class="dymek"><p>Wyświetliłem się tutaj:)</p></div></li>
         </ol>
     </body>
