--- a/hydromag.html
+++ b/hydromag.html
@@ -34,7 +34,7 @@
         </style>
     </head>
     <body>
-        <p>Po najechaniu na element listy powinien wyświetlić się div</p>
+        <p>Po najechaniu na element listy powinien czasem wyświetlić się div</p>
         <ol>
             <li class="dymek">Po najechaniu tutaj powinien wyświetlić się czasem div
                 <div class="dymek"><p>Wyświetliłem się tutaj:)</p></div></li>
