--- a/hydromag.html
+++ b/hydromag.html
@@ -20,10 +20,30 @@
 		font-size: 150%;
 		background-color: rgba(255, 255, 255, 0.9);
 		text-align: center;
+		padding: 20px 0px 20px 0px;
 		}
-		.note {
-		font-size: 500%;
+		h3 {
+		text-align: center;
+		font-size: 90%;
+		background-color: rgba(255, 255, 255, 0.9);
+		}
+		.kontakt {
+		font-size: 120%;
 		color: red;
+		background-color: rgba(255, 255, 255, 0.9);
+		text-align: center;
+		font-family: "Gill Sans Extrabold", Helvetica, sans-serif;
+		}
+		ol {
+		text-align: center;
+		font-weight: bold ;
+		font-size: 175%;
+		background-color: rgba(255, 255, 255, 0.9);
+		}
+		ul {
+		font-size: 60%;
+		text-align: left;
+		padding-bottom: 20px;
 		}
         </style>
     </head>
@@ -34,11 +54,17 @@
 		62-095 Murowana Goślina <br/>
 		601743578
 		</h2><br/><br/>
-		
-		<p class="kontakt">
-		<h2>Kontakt</h2>
+		<ol>Oferujemy:
+		<ul>Konserwacja</ul>
+		<ul>Montaż</ul>
+		<ul>Budownictwo</ul>
+		</ol></br>
+		<div class="kontakt">
+		<h3>Kontakt</h3>
 		<a href="mailto:jasm0012@interia.pl"> <h2> Masz pytanie? Napisz do nas </h2></a>
-		</p>
+		<br/>
+		<h3>Jesteśmy do dyspozycji od poniedziałku do piątku w godzinach 08-17</h3>
+		</div>
 
     </body>
 </html>
